--- a/doc/man/fujicoind.1
+++ b/doc/man/fujicoind.1
@@ -789,7 +789,7 @@ Copyright (C) 2009-2022 The Fujicoin Core developers
 
 Please contribute if you find Fujicoin Core useful. Visit
 <https://bitcoincore.org/> for further information about the software.
-The source code is available from <https://github.com/bitcoin/bitcoin>.
+The source code is available from <https://github.com/fujicoin/fujicoin>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
